add support for the case where a user can view a snapshot but not its source dataset; fix sonar warnings